Correcting Overflow Issue on IE

--- a/src/_patterns/00-nds/01-atoms/layouts/layouts-site/layouts-site.scss
+++ b/src/_patterns/00-nds/01-atoms/layouts/layouts-site/layouts-site.scss
@@ -4,5 +4,7 @@
 }
 
 .page {
-    overflow: hidden;
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+        overflow: hidden;
+    }
 }
